# moose

./: .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  SECURITY.md  com.gps.backend.plist.template  com.moose.backend.plist.template  docker-compose.yml  index.html  openclaw.json  profile.yaml.example  pyproject.toml  script.js  security_check.py  start.sh  styles.css
.github/workflows/: ci.yml  pages.yml
backend/: audit.py  auth.py  cognitive_loop.py  config.py  core.py  daemon.py  db.py  email_sender.py  main.py  marketing_engine.py  memory.py  memory_v2_design.md  models.py  network.py  outreach_engine.py  profile.py  requirements.txt  rust_episodic.py  rust_memory.py  rust_router.py  rust_scheduler.py  schema.py  stt.py  tools.py  tools_content.py  tools_desktop.py  tools_icp.py  tools_outreach.py  tools_scripting.py  tools_system.py  tools_temporal.py  tts_server.py  webhook_handlers.py
backend/advocacy/: __init__.py  developmental.py  friction.py  goals.py  models.py  network.py  onboarding.py  profiles.py  watchdog.py
backend/agents/: __init__.py  base.py  classifier.py  claude.py  coder.py  content.py  hermes.py  math_agent.py  outreach.py  prompts.py  reasoner.py  registry.py  security.py
backend/core/: __init__.py  agent_core.py  background_tasks.py  chat_pipeline.py  classification.py  escalation.py  state.py
backend/improvement/: __init__.py  executor.py  models.py  researcher.py
backend/inference/: __init__.py  base.py  llamacpp.py  (+3 more)
backend/rust_core/moose_core/: Cargo.toml  README.md  pyproject.toml
backend/rust_core/moose_core/src/: episodic.rs  lib.rs  messages.rs  router.rs  scheduler.rs  vector.rs  workspace.rs
backend/rust_core/moose_core/src/adapters/: llamacpp.rs  mod.rs  ollama.rs  openai.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: install-daemon.sh  setup.py  uninstall-daemon.sh
(+154 files in other folders)
