[package]
name = "moose_core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "High-performance Rust core for Moose AI backend"

[lib]
name = "moose_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
tokio = { version = "1", features = ["full", "sync"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
ndarray = "0.16"
parking_lot = "0.12"
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
regex = "1"
once_cell = "1"
pyo3-async-runtimes = { version = "0.22", features = ["tokio-runtime"] }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
